Major upgrade Primefaces library from version 8 to 11. More to come...